# redis-ttk

./: .gitignore  README.md  build.spec  build_linux.sh  build_mac.sh  build_windows.bat  main.py  pyproject.toml  redis_client.py  release.sh
.github/workflows/: release.yml
config/: __init__.py  settings.py  version.py
gui/: __init__.py  connection_dialog.py  custom_dialogs.py  key_browser.py  main_window.py  settings_dialog.py  value_editor.py
scripts/: get_version.py
